# SearchVacancies

./: add_vacancy_json.py  main.py  pyproject.toml
data/: vacancy_list.json
src/: add_vacancies_json.py  adding_vacancies.py  api_vacancies.py  load_vacancies.py  vacancy.py
