[tool.poetry]
name = "searchvacancies"
version = "0.1.0"
description = ""
authors = ["jylu lyapunova <jylilapa@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
pytest = "^8.3.3"
flake8 = "^7.1.1"


[tool.poetry.group.lint.dependencies]
black = "^24.10.0"
mypy = "^1.13.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.isort]
line_length = 119
